# polibot

./: .env.example  .gitignore  README.md  demonstration_logs.md  docker-compose.yml  gradio_app.py  prototype_comprehensive_report.md  pyproject.toml
polibot/: config.py
polibot/api/: main.py
polibot/generation/: llm.py
polibot/ingestion/: captioning.py  chunking.py  embedding.py  pipeline.py  run.py
polibot/material_generation/: exercise_fsm.py  exercises.py  latex_utils.py  lessons.py  pdf_renderer.py  slide_editor.py
polibot/material_generation/templates/: exercises.tex.jinja2  lessons.tex.jinja2
polibot/retrieval/: qdrant_client.py  reranker.py  retriever.py
polibot/storage/: materials.py  models.py  postgres.py  rustfs_client.py
scripts/: exercise_fsm.py  test_agents.py  test_edit_slide.py  test_tenant.py  test_vision.py
tests/: test_exercises.py  test_generation.py  test_ingestion.py  test_integration_rag.py  test_latex_utils.py  test_lessons.py  test_materials.py  test_pdf_renderer.py  test_retrieval.py
