[tool.poetry]
name = "polibot"
version = "0.1.0"
description = "Multimodal RAG system"
authors = ["PoliBot"]
packages = [{ include = "polibot" }]

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
fastapi = "^0.115.0"
uvicorn = { extras = ["standard"], version = "^0.32.0" }
pydantic-settings = "^2.5.2"
llama-index-core = "^0.11.20"
llama-index-llms-ollama = "^0.3.2"
qdrant-client = "^1.11.3"
ollama = "^0.3.3"
fastembed = "^0.4.1"
FlagEmbedding = "^1.3.4"
torch = [
    { version = "2.5.1+cu121", source = "pytorch-cu121", markers = "sys_platform != 'darwin'" },
    { version = "^2.4.0", markers = "sys_platform == 'darwin'" },
]
pymupdf = "^1.24.11"
sqlalchemy = "^2.0.35"
psycopg2-binary = "^2.9.9"
boto3 = "^1.35.36"
jinja2 = "^3.1.4"
python-dotenv = "^1.0.1"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"
gradio = "^5.5.0"
requests = "^2.32.3"

[[tool.poetry.source]]
name = "pytorch-cu121"
url = "https://download.pytorch.org/whl/cu121"
priority = "explicit"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
